
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--添加一条item-->


    <item
        android:id="@+id/action_mess_config"
        android:orderInCategory="80"
        android:title="@string/mess_config"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_client"
        android:orderInCategory="90"
        android:title="@string/user_manage"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never"/>

</menu>
