<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >
    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_admin_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/base_bg"
        />
    <EditText
        android:id="@+id/et_area_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_area_id"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />
    <EditText
        android:id="@+id/et_area_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_area_name"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />
    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_company_name"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:drawablePadding="16dp"
        android:hint="@string/hint_admin_name"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />


    <EditText
        android:id="@+id/et_reg_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawablePadding="16dp"
        android:hint="@string/hint_reg_code"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/next"
        android:textSize="@dimen/text_large_size"
        android:textColor="#ffffff" />

</LinearLayout>