<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/base_bg"
        android:text="@string/tv_admin_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <TextView
        android:id="@+id/t_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:drawablePadding="16dp"
        android:hint="@string/hint_admin_name"
        android:drawableLeft="@drawable/ic_username_selector"
        android:paddingLeft="16dp"
        android:gravity="center|left"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:inputType="textPassword"
        android:maxLength="20"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd_again"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:inputType="textPassword"
        android:maxLength="20"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:src="@drawable/ic_phone_selector" />
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:hint="@string/hint_phonenumber"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="@dimen/text_middle_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:src="@drawable/ic_email_selector" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:background="#ffffff"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="@dimen/text_middle_size" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <!--<EditText-->
        <!--android:id="@+id/et_reg_code"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:background="@android:color/white"-->
        <!--android:drawablePadding="16dp"-->
        <!--android:hint="@string/hint_reg_code"-->
        <!--android:drawableLeft="@drawable/ic_number"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:singleLine="true"-->
        <!--android:textSize="@dimen/text_middle_size" />-->

    <Button
        android:id="@+id/reg_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/register"
        android:textSize="@dimen/text_large_size"
        android:textColor="#ffffff" />

</LinearLayout>