<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutFooter"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/main_footer_bg">

    <View
        android:id="@+id/viewSplit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/foot_bar_admin"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_admin_bg"
            android:text="@string/main_navigation_admin"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/foot_bar_home"
            style="@style/main_footer_bar_radio"
            android:checked="true"
            android:drawableTop="@drawable/widget_bar_home_bg"
            android:text="@string/main_navigation_home"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/foot_bar_user"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_user_bg"
            android:text="@string/main_navigation_user"
            android:gravity="center"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>