<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/listview_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10">

            <TextView
                android:id="@+id/user_name"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/listview_bg">

        <LinearLayout
            android:id="@+id/change_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:clickable="true"
            android:paddingTop="@dimen/space_10">

            <TextView
                android:id="@+id/number"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:clickable="false"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/phone_number"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="right" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/change_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10">

            <TextView
                android:id="@+id/mail"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/change_password" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/listview_bg">

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/logout" />

        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/exit" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>