<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <include layout="@layout/main_toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="0.4"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/node_num" />

            <TextView
                android:id="@+id/dev_eui"
                style="@style/fragment_user"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="0.4"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/temp"
                style="@style/fragment_user"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="0.4"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/humi" />

            <TextView
                android:id="@+id/humi"
                style="@style/fragment_user"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">

            <TextView
                style="@style/fragment_user"
                android:layout_weight="0.4"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/weight"
                style="@style/fragment_user"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">

            <TextView
                android:id="@+id/number"
                style="@style/fragment_user"
                android:layout_weight="0.4"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/last_time" />


            <TextView
                android:id="@+id/last_time"
                style="@style/fragment_user"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">


            <Switch
                android:id="@+id/control_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/space_40"
                android:layout_marginRight="@dimen/space_20"
                android:textSize="@dimen/text_size_18"
                android:text="@string/control_fan" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:weightSum="1">


            <Switch
                android:id="@+id/control_heater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/space_33"
                android:layout_marginRight="@dimen/space_20"
                android:textSize="@dimen/text_size_18"
                android:text="@string/control_heater" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />


    </LinearLayout>

</LinearLayout>